# cpplogo

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cc
include/cpplogo/: bamlogo.h  bamsoo.h  common.h  doo.h  imgpo.h  initbamsoo.h  logging.h  logo.h  node.h  optintf.h  randombamlogo.h  randombamsoo.h  randomimgpo.h  randomlogo.h  randomsoo.h  soo.h  types.h
include/cpplogo/bamsoo/: bayesopt_gp.h
src/: bamsoo.cc  common.cc  doo.cc  imgpo.cc  initbamsoo.cc  logging.cc  logo.cc  node.cc  optintf.cc  randomimgpo.cc  randomsoo.cc  soo.cc
